rajyeturi16-salesforce/project/objects/SFDC_Team__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_POC__c</fullName>
        <label>Count of POC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Participants__c</fullName>
        <label>Count of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPT__c</fullName>
        <label>Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>SFDC_Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone_Number__c</columns>
        <columns>PPT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC_Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>